# NodeNet

./: .gitignore  Buglist.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: make-dmg-bg.js  release.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/dispatch2/src/: lib.rs
src-tauri/src/: alerts.rs  commands.rs  config.rs  keychain.rs  main.rs  metrics.rs  monitor.rs  secrets.rs  ssh.rs  ssl.rs  terminal.rs  three_x_ui.rs  tray.rs  util.rs
src/components/: Clients.tsx  CommandOutputModal.tsx  ConfirmModal.tsx  CountryFlag.tsx  Dashboard.tsx  EventsLog.tsx  Inbounds.tsx  LogsView.tsx  MetricChart.tsx  Onboarding.tsx  QrModal.tsx  RoutingEditor.tsx  ServerUpdates.tsx  Settings.tsx  SetupPresets.tsx  Sidebar.tsx  SslCertificates.tsx  TerminalView.tsx  ToastHost.tsx  Topbar.tsx  UpdateChecker.tsx
src/stores/: eventsStore.ts  metricsStore.ts  serverStore.ts  sslStore.ts  threeXStore.ts
src/types/: index.ts
vpnctrl/: .gitignore  index.html  package.json
vpnctrl/src-tauri/: Cargo.toml  tauri.conf.json
vpnctrl/src-tauri/capabilities/: default.json
vpnctrl/src-tauri/src/: config.rs  main.rs  metrics.rs  ssh.rs  three_x_ui.rs
vpnctrl/src/components/: Inbounds.tsx  QrModal.tsx  Settings.tsx  Sidebar.tsx
vpnctrl/src/stores/: threeXStore.ts
vpnctrl/src/types/: index.ts
