[package]
name = "nodenet"
version = "0.3.6"
description = "macOS desktop VPN server controller and monitor"
authors = ["NodeNet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
russh = "0.49"
russh-keys = "0.49"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
base64 = "0.22"
aes-gcm = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
